[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
rust-version = "1.76"
homepage = "https://xash.su"
repository = "https://github.com/FWGS/xash3d-master"

[workspace.dependencies]
#
# Workspace crates
#
xash3d-protocol = { path = "crates/xash3d-protocol", version = "0.2.0", features = ["net"] }
xash3d-observer = { path = "crates/xash3d-observer", version = "0.1.0" }

#
# External crates
#
libc = "0.2.148"
log = "0.4"
bitflags = "2.4"
thiserror = "2"
getopts = "0.2.21"
blake2b_simd = "1.0"
fastrand = "2"
ahash = "0.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "1.0"
crossterm = { version = "0.29", default-features = false, features = ["events", "bracketed-paste", "windows"] }
tokio = { version = "1.52", features = ["macros", "net", "signal", "sync", "rt"] }

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
