[package]
name = "xash3d-observer"
description = "Library to monitor Xash3D game servers"
version = "0.1.0"
license = "LGPL-3.0-only"
keywords = ["xash3d"]
categories = []
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
fastrand.workspace = true
xash3d-protocol.workspace = true
