[package]
name = "xash3d-master"
description = "Master server for games on Xash3D engine"
version = "0.2.1"
license = "AGPL-3.0-only"
keywords = ["xash3d"]
categories = ["command-line-utilities"]
authors.workspace = true
edition = "2021"
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["logtime"]
# unused in this version
logtime = []
stats = []

[dependencies]
thiserror.workspace = true
getopts.workspace = true
log.workspace = true
bitflags.workspace = true
fastrand.workspace = true
serde.workspace = true
toml.workspace = true
blake2b_simd.workspace = true
ahash.workspace = true
smol.workspace = true
async-signal.workspace = true
xash3d-protocol.workspace = true
